# rsi_alert

./: .gitignore  README.md  calculator.py  fetcher.py  main.py  pyproject.toml  需求与设计.md
deploy/: cloudflared-config.example.yml  deploy.sh  检查已有隧道.md  部署指南.md
frontend/: index.html
tests/: test_calculator.py
